--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/dating_db
 spring.datasource.username=root
-spring.datasource.password=Password1
+spring.datasource.password=Password@1
+spring.devtools.restart.enabled=true
